--- a/vsts/resource-group-cleanup.yaml
+++ b/vsts/resource-group-cleanup.yaml
@@ -7,7 +7,7 @@ resources:
 jobs:
   - job: Cleanup
     displayName: Cleanup
-    timeoutInMinutes: 10
+    timeoutInMinutes: 30
     pool:
       vmImage: ubuntu-latest
     steps:
@@ -28,6 +28,6 @@ jobs:
               if ($rgName.StartsWith("javasdkgate") -or $rgName.StartsWith("dotnetsdkgate")) 
               {
                   Write-Host "Deleting resource group with name:" $rgName
-                  az group delete --name $rgName
+                  az group delete --name $rgName --yes
               }
           }
