--- a/vsts/vsts_windows.yaml
+++ b/vsts/vsts_windows.yaml
@@ -33,7 +33,6 @@ jobs:
   - job: WINDOWS
     displayName: Windows
     dependsOn: 
-      - BuildTestProxyDockerImage
       - DeployCloudTestResources
     condition: succeeded()
     variables:
@@ -90,7 +89,7 @@ jobs:
 
       - download: current
         displayName: 'Download test certificates'
-        artifact: docker-images
+        artifact: test-certificates
 
       - powershell: ./vsts/start_tpm_windows.ps1
         displayName: "Start TPM Simulator"
