--- a/provisioning/device/samples/how to guides/CsrProvisioningSample/CsrProvisioningSample.csproj
+++ b/provisioning/device/samples/how to guides/CsrProvisioningSample/CsrProvisioningSample.csproj
@@ -10,13 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.42.3" />
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Client" Version="1.19.4" />
+  </ItemGroup>
 
-    <!-- Note: Applications should not need to import all 3 protocols. This was done to simplify protocol selection within the sample.-->
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Amqp" Version="1.16.6" />
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Http" Version="1.15.4" />
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Transport.Mqtt" Version="1.17.5" />
+  <ItemGroup>
+    <!-- Reference local SDK projects with CSR support -->
+    <ProjectReference Include="..\..\..\..\..\iothub\device\src\Microsoft.Azure.Devices.Client.csproj" />
+    <ProjectReference Include="..\..\..\src\Microsoft.Azure.Devices.Provisioning.Client.csproj" />
+    <ProjectReference Include="..\..\..\..\transport\amqp\src\Microsoft.Azure.Devices.Provisioning.Transport.Amqp.csproj" />
+    <ProjectReference Include="..\..\..\..\transport\http\src\Microsoft.Azure.Devices.Provisioning.Transport.Http.csproj" />
+    <ProjectReference Include="..\..\..\..\transport\mqtt\src\Microsoft.Azure.Devices.Provisioning.Transport.Mqtt.csproj" />
   </ItemGroup>
 
 </Project>
